# api/swagger/swagger.yaml
@@ -40,6 +40,22 @@ paths:
           description: An array of restaurants
           schema:
             $ref: "#/definitions/Restaurants"
+    post:
+      summary: Create a new restaurant entry
+      description: Create a new restaurant entry
+      operationId: createMean
+      parameters:
+        - name: restaurant
+          in: body
+          required: true
+          description: Restaurant Object
+          schema:
+            $ref: "#/definitions/Restaurant"         
+      responses:
+        201:
+          description: OK
+          schema:
+            $ref: "#/definitions/Restaurant"
   /hello:
     # binds a127 app logic to a route
     x-swagger-router-controller: hello_world
